--- a/MyGames.html
+++ b/MyGames.html
@@ -10,7 +10,7 @@
 <body>
   <div class="website">
     <nav>
-      <a href="https://wonkanese.github.io/Wonkanese/MyGames">
+      <a href="https://wonkanese.github.io\wonkanese.html">
         <button class="Games_Button">My Games</button>
       </a> 
     </nav>
