--- a/MyGames.html
+++ b/MyGames.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Wonkanese Website</title>
+  <title>My Games</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,14 +14,13 @@
         <button class="Games_Button">My Games</button>
       </a> 
     </nav>
-    <h1 class="title" id="outlined">Wonkanese</h1>
-    <h2 class="description" id="outlined">For all goof and all Wonkanese.</h2>
+    <h1 class="title" id="outlined">My Games</h1>
+    <h2 class="description" id="outlined">Detailed descriptions of my games and projects.</h2>
     <div class="about">
       <div class="about_border">
-        <h3 class="about_title">About</h3>
+        <h3 class="about_title">Modern Chess</h3>
         <div class="line"></div>
-        <p class="about_description">Hi, I'm Wonkanese, a goofy goober. I personally created this website, I coded and
-          designed it. This website is the 2nd edition of the Wonkanese Website. I am making a second one because I know a lot more around web development.
+        <p class="about_description"> Testicles
         </p>
         <div class="subline"></div>
         <h3>What is on this website?</h3>
