--- a/MyGames.html
+++ b/MyGames.html
@@ -20,17 +20,13 @@
       <div class="about_border">
         <h3 class="about_title">Modern Chess</h3>
         <div class="line"></div>
-        <p class="about_description"> Testicles
+        <p class="about_description"> < image of modern chess will be here >
         </p>
         <div class="subline"></div>
-        <h3>What is on this website?</h3>
+        <h3>Modern Chess Info</h3>
         <div class="subline"></div>
-        <ul class="about_list">
-          <li>My Games & Projects</li>
-          <li>Wonkanese Info</li>
-          <li>My Links</li>
-          <li>And More!</li>
-        </ul>
+        <p class="game_info game-left">Game Link:</p>
+        <p class="game_info game-right">UNRELEASED</p>
       </div>
     </div>
     <div class="links">
